...
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:text="Vote"
        app:layout_constraintStart_toEndOf="@+id/c2"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <TextView
        android:id="@+id/c1"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
...
